vlib/v/checker/tests/mod_op_wrong_right_type_err_b.out
vlib/v/checker/tests/mod_op_wrong_right_type_err_b.v:2:14: error: mismatched types `any_int` and `[]int`
    1 | fn main() {
    2 |     println(1 % [1,2,3])
      |                 ~~~~~~~
    3 | }
